--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/rahidayat/sequelize-intro#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "pg": "^6.4.0",
     "pg-hstore": "^2.3.2",
