sampai install express-session

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-partial": "^0.1.0",
+    "express-session": "^1.15.3",
     "pg": "^6.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.3.1",
