--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,8 @@
   },
 
   "production": {
-    "use_env_variable": "DATABASE_url"
+    "use_env_variable": "DATABASE_url",
+    "dialect": "postgres"
 
   }
 }
